--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,8 @@ header {
   width: 100%;
   height: 8vh;
   display: flex;
-  /* margin-bottom: 4%; */
+  top: 0;
+  position: fixed;
   background-color: #141414;
 }
 
@@ -64,6 +65,9 @@ header {
   width: 20rem;
 }
 
+.releaseDate_now{
+  text-decoration: underline;
+}
 
 .netflixTitles{
   color: #ffff;
