--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 body {
   margin: 0;
   padding: 0;
@@ -64,9 +66,24 @@ header {
 .netflixImages {
   width: 20rem;
 }
+a {
+  overflow: hidden;
+}
+a .netflixImages {
+  max-width: 100%;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+a:hover .netflixImages {
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
 
 .releaseDate_now{
   text-decoration: underline;
+  padding-top: 15px;
 }
 
 .netflixTitles{
